syntax = "proto3";

package common;
option go_package = "github.com/MUlt1mate/protoc-gen-httpgo/example/proto/common;common";

// We use separated package for structs, so we can reuse them with different generations

message InputMsgName {
  int64 int64Argument = 1;
  string stringArgument = 2;
}

message AllTypesMsg {
  bool BoolValue = 1;
  options EnumValue = 2;
  int32 Int32Value = 3;
  sint32 Sint32Value = 4;
  uint32 Uint32Value = 5;
  int64 Int64Value = 6;
  sint64 Sint64Value = 7;
  uint64 Uint64Value = 8;
  sfixed32 Sfixed32Value = 9;
  fixed32 Fixed32Value = 10;
  float FloatValue = 11;
  sfixed64 Sfixed64Value = 12;
  fixed64 Fixed64Value = 13;
  double DoubleValue = 14;
  string StringValue = 15;
  bytes BytesValue = 16;
  InputMsgName MessageValue = 17; // not supported as URI argument
  repeated string SliceStringValue = 18;
  repeated int32 SliceInt32Value = 19;
}

message AllNumberTypesMsg {
  int32 Int32Value = 3;
  sint32 Sint32Value = 4;
  uint32 Uint32Value = 5;
  int64 Int64Value = 6;
  sint64 Sint64Value = 7;
  uint64 Uint64Value = 8;
  sfixed32 Sfixed32Value = 9;
  fixed32 Fixed32Value = 10;
  float FloatValue = 11;
  sfixed64 Sfixed64Value = 12;
  fixed64 Fixed64Value = 13;
  double DoubleValue = 14;
}

enum options {
  FIRST = 0;
  SECOND = 1;
} ;

message OutputMsgName {
  string stringValue = 1;
  int64 intValue = 2;
}

message OptionalField {
  optional bool BoolValue = 1;
  optional options EnumValue = 2;
  optional int32 Int32Value = 3;
  optional sint32 Sint32Value = 4;
  optional uint32 Uint32Value = 5;
  optional int64 Int64Value = 6;
  optional sint64 Sint64Value = 7;
  optional uint64 Uint64Value = 8;
  optional sfixed32 Sfixed32Value = 9;
  optional fixed32 Fixed32Value = 10;
  optional float FloatValue = 11;
  optional sfixed64 Sfixed64Value = 12;
  optional fixed64 Fixed64Value = 13;
  optional double DoubleValue = 14;
  optional string StringValue = 15;
  optional bytes BytesValue = 16;
  optional InputMsgName MessageValue = 17; // not supported as URI argument
}

message RepeatedCheck {
  repeated bool BoolValue = 1;
  repeated options EnumValue = 2;
  repeated int32 Int32Value = 3;
  repeated sint32 Sint32Value = 4;
  repeated uint32 Uint32Value = 5;
  repeated int64 Int64Value = 6;
  repeated sint64 Sint64Value = 7;
  repeated uint64 Uint64Value = 8;
  repeated sfixed32 Sfixed32Value = 9;
  repeated fixed32 Fixed32Value = 10;
  repeated float FloatValue = 11;
  repeated sfixed64 Sfixed64Value = 12;
  repeated fixed64 Fixed64Value = 13;
  repeated double DoubleValue = 14;
  repeated string StringValue = 15;
  repeated bytes BytesValue = 16; // this field represented as [][]byte and doesn't work properly as a path argument
  repeated string StringValueQuery = 17;
}

message Empty {}

message Array {
  repeated ArrayItem items = 1;
}

message ArrayItem {
  string value = 1;
}

message OnlyStruct {
  ArrayItem value = 1;
}

message MultipartFormRequest {
  FileEx document = 1;
  string otherField = 2;
}

message FileEx {
  bytes file = 1;
  string name = 2;
  map<string, string> headers = 3;
}

message MultipartFormAllTypes {
  bool BoolValue = 1;
  options EnumValue = 2;
  int32 Int32Value = 3;
  sint32 Sint32Value = 4;
  repeated uint32 Uint32Value = 5;
  int64 Int64Value = 6;
  optional sint64 Sint64Value = 7;
  uint64 Uint64Value = 8;
  sfixed32 Sfixed32Value = 9;
  repeated fixed32 Fixed32Value = 10;
  float FloatValue = 11;
  sfixed64 Sfixed64Value = 12;
  optional fixed64 Fixed64Value = 13;
  double DoubleValue = 14;
  string StringValue = 15;
  bytes BytesValue = 16;
  //  InputMsgName MessageValue = 17;
  repeated string SliceStringValue = 18;
  repeated int32 SliceInt32Value = 19;
  FileEx document = 20;
  repeated string RepeatedStringValue = 21;
}

message AllTextTypesMsg {
  string String = 1;
  repeated string RepeatedString = 2;
  optional string OptionalString = 3;
  bytes Bytes = 4;
  repeated bytes RepeatedBytes = 5;
  optional bytes OptionalBytes = 6;
  options Enum = 7;
  repeated options RepeatedEnum = 8;
  optional options OptionalEnum = 9;
}


message GetMessageRequest {
  string name = 1; // Mapped to URL path.
}

message Message {
  string text = 1; // The resource content.
}

message GetMessageRequestV2 {
  message SubMessage {
    string subfield = 1;
  }
  string message_id = 1; // Mapped to URL path.
  int64 revision = 2;    // Mapped to URL query parameter `revision`.
  SubMessage sub = 3;    // Mapped to URL query parameter `sub.subfield`.
}

message UpdateMessageRequest {
  string message_id = 1; // mapped to the URL
  MessageV2 message = 2; // mapped to the body
}

message MessageV2 {
  string message_id = 1;
  string text = 2;
}

message GetMessageRequestV3 {
  string message_id = 1;
  string user_id = 2;
}
